cmake_minimum_required(VERSION 3.27)
project(demoTestXi C)

set(CMAKE_C_STANDARD 11)

add_executable(demoTestXi
        vd01/test.c
        codeMauC/vd01.c
        codeMauC/vd02.c
        codeMauC/vd03.c
        vdLab7/vdLab1.c
        vdLab7/vdLab2.c
        vdLab7/vdLab3.c
        vdLab7/vdLab4.c
        vdLab7/vdLab5.c
        vdLab7/vdLab6.c
        vdLab7/vdLab7.7.c
        vdLab7/vdLab9.c
        vdLab7/vdLab10.c
        Test.c
        codeMauC/vd04.c
        codeMauC/vd05.c
        codeMauC/vd06.c
        vdLab8/vdLab8-01.c
        vdLab8/vdLab8-02.c
        vdLab8/vdLab8-03.c
        vdLab8/vdLab8-04.c
        vdLab8/vdLab8-05.c
        vdLab8/baitapLab8-01.c
        vdLab8/baitapLab8-02.c
        vdLab8/baitapLab8-03.c
        vdLab8/baitapLab8-04.c
        vd01/vdCode01.c
        vdLab4/vdLab4-01.c
        vdLab4/vdLab4-02.c
        vdLab4/vdLab4-04.c
        vdLab4/vdLab4-05.c
        vdLab4/vdLab4-06.c
        vdLab4/vdLab4-07.c
        vdLab4/vdLab4-09.c
        vdLab4/vdLab4-10.c
        vdLab4/vdLab4-11.c)
