cmake_minimum_required(VERSION 3.27)
project(demoTestXi C)

set(CMAKE_C_STANDARD 11)

add_executable(demoTestXi
        viduCode/test.c
        codeMauC/vd01.c
        codeMauC/vd02.c
        codeMauC/vd03.c
        vdLab7/vdLab1.c
        vdLab7/vdLab2.c
        vdLab7/vdLab3.c
        vdLab7/vdLab4.c
        vdLab7/vdLab5.c
        vdLab7/vdLab6.c
        vdLab7/vdLab7.7.c
        vdLab7/vdLab9.c
        vdLab7/vdLab10.c
        Test.c
        codeMauC/vd04.c
        codeMauC/vd05.c
        codeMauC/vd06.c
        vdLab8/vdLab8-01.c
        vdLab8/vdLab8-02.c
        vdLab8/vdLab8-03.c
        vdLab8/vdLab8-04.c
        vdLab8/vdLab8-05.c
        vdLab8/baitapLab8-01.c
        vdLab8/baitapLab8-02.c
        vdLab8/baitapLab8-03.c
        vdLab8/baitapLab8-04.c
        viduCode/vdCode01.c
        vdLab4/vdLab4-01.c
        vdLab4/vdLab4-02.c
        vdLab4/vdLab4-04.c
        vdLab4/vdLab4-05.c
        vdLab4/vdLab4-06.c
        vdLab4/vdLab4-07.c
        vdLab4/vdLab4-09.c
        vdLab4/vdLab4-10.c
        vdLab4/vdLab4-11.c
        vdSeession5/demoLab5-01-02.c
        vdSeession5/demoLab5-03.c
        vdSeession5/demoLab5-04.c
        vdSeession5/demoLab5-4.c
        vdSeession5/demoLab5-05-06.c
        vdSeession5/demoLab5-08-09.c
        vdSeession5/demoLab5-11.c
        vdSeession5/demoLab5-12.c
        viduCode/vdCode02.c
        viduCode/vdCode03.c
        viduCode/vdCode04.c
        viduCode/vdCode05.c
        viduCode/vdCode06.c
        baitapLab5/baitapLab5-01.c
        baitapLab5/baitapLab5-02.c
        baitapLab5/baitapLab5-03.c
        baitapLab5/baitapLab5-04.c
        baitapLab5/baitapLab5-05.c
        baitapLab5/baitapLab6-06.c
)
